<resources>
    <string name="app_name">Fun with Math</string>
    <string name="hs_text1">Was möchtest du üben?</string>
    <string name="hs_rb1">Addition</string>
    <string name="hs_rb2">Subtraktion</string>
    <string name="hs_rb3">Multiplikation</string>
    <string name="hs_rb4">Division ohne Rest</string>
    <string name="hs_rb5">Division mit Rest</string>
    <string name="hs_rb6">Gemischt</string>
    <string name="hs_rb7">Kleines 1x1</string>
    <string name="hs_button1">Los gehts!</string>
    <string name="fs_textFeedback">Platzhalter_ok-super-nochüben</string>
    <string name="fs_textStern">Platzhalter_erreichteSterne</string>
    <string name="fs_button">Nochmal starten!</string>
    <string name="rs_text1">Was ist die Lösung von dieser Rechnung ?</string>
    <string name="rs_textRechnung">Platzhalter Rechnung</string>
    <string name="rs_button1">OK</string>
    <string name="rs_button2">Weiter</string>
    <string name="fs_hintRechnung">Lösung hier eingeben</string>
    <string name="fs_hintRestRechnung">Rest hier eingeben</string>
    <string name="help_text1">Welche Erläuterung möchtest du haben?</string>
    <string name="ss_text1">Wähle eine Schwierigkeitsstufe</string>
    <string name="ss_rb1">Leicht</string>
    <string name="ss_rb2">Mittel</string>
    <string name="ss_rb3">Schwer</string>
    <string name="ss_button1">Los gehts!</string>
    <string name="button_hilfe">zurück</string>
    <string name="textView1">TextView</string>
    <string name="textView2">TextView</string>
    <string name="textView3">TextView</string>
    <string name="textView4">TextView</string>
    <string name="textView5">TextView</string>
    <string name="textView6">TextView</string>
    <string name="textView7">TextView</string>
    <string name="textView8">TextView</string>
    <string name="textView9">TextView</string>
    <string name="textView10">TextView</string>
    <string name="ed_1"></string>
    <string name="ed_2"></string>
    <string name="ed_3"></string>
    <string name="ed_4"></string>
    <string name="ed_5"></string>
    <string name="ed_6"></string>
    <string name="ed_7"></string>
    <string name="ed_8"></string>
    <string name="ed_9"></string>
    <string name="ed_10"></string>
    <string name="button_fertig">Fertig</string>
    <string name="button_back">Zurück</string>
    <string name="hs_help">Hilfe?</string>
    <string-array name="Calculations">
        <item>Addition</item>
        <item>Subtraktion</item>
        <item>Multiplikation</item>
        <item>Division</item>
    </string-array>
    <string-array name="Kleines1x1">
        <item>1er Reihe</item>
        <item>2er Reihe</item>
        <item>3er Reihe</item>
        <item>4er Reihe</item>
        <item>5er Reihe</item>
        <item>6er Reihe</item>
        <item>7er Reihe</item>
        <item>8er Reihe</item>
        <item>9er Reihe</item>
        <item>10er Reihe</item>
    </string-array>
    <string name="Hilftext1">Die Addition ist die erste Grundrechenart. Bei dieser geht es um das Zusammenzählen von
        zwei oder mehr Zahlen.\n\nBeispiele für die Addition sind:\n\n

        2 + 3 = 5\n
        4 + 2 = 6\n
        5 + 8 = 13
    </string>
    <string name="Hilftext2">
        Bei einer Subtraktion wird eine Zahl von einer anderen Zahl abgezogen. Sind die beiden Zahlen gleich groß ist
        das Ergebnis Null.\n\nEinige Beispiele für die Subtraktion sind:\n\n

        8 - 2 = 6\n
        10 - 5 = 5\n
        12 - 10 = 2
    </string>
    <string name="Hilftext3">
        Die dritte Grundrechenart ist die Multiplikation. Dabei werden zwei oder auch mehr Zahlen miteinander
        multipliziert.\n\nHier noch einige Beispiele zur Multiplikation:\n\n

        2 · 3 = 6 \n
        4 · 2 = 8 \n
        3 · 3 = 9
    </string>
    <string name="Hilftext4">
        Die letzte Grundrechenart ist die Division, manchmal auch einfach als Teilen bezeichnet. Die Division ist die
        Umkehrung der Multiplikation.\n\nFolgend einige Beispiele: \n\n

        8 : 2 = 4 \n
        16 : 8 = 2 \n
        20 : 10 = 2
    </string>
</resources>

