<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".rechen_screen">
    <TextView
            android:text="@string/rs_text1"
            android:layout_width="315dp"
            android:layout_height="90dp"
            android:id="@+id/rs_text1" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="44dp" android:layout_marginStart="44dp" app:fontFamily="sans-serif"
            android:textSize="24sp" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/rs_textRechnung"
            android:layout_width="319dp"
            android:layout_height="53dp"
            android:id="@+id/rs_textrechnung" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="44dp" android:layout_marginStart="44dp"
            android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/rs_text1"/>
    <EditText
            android:layout_width="319dp"
            android:layout_height="48dp"
            android:ems="10"
            android:id="@+id/rs_nummerEingabe" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="45dp" android:layout_marginStart="45dp"
            android:hint="@string/fs_hintRechnung" android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/rs_textrechnung" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="47dp" android:layout_marginRight="47dp" android:inputType="number"
    />
    <Button
            android:text="@string/rs_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rs_button" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/rs_nummerEingabe"
            android:textColor="@android:color/black" android:background="@android:color/holo_orange_dark"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
    />

    <RatingBar
            android:layout_width="241dp"
            android:layout_height="61dp"
            android:id="@+id/rs_ratingbar" android:stepSize="0.5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp" android:numStars="5"
            android:isIndicator="true"/>

    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="367dp"
            android:layout_height="42dp"
            android:id="@+id/rs_progressbar" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="120dp"
    />

    <ImageView
            android:layout_width="130dp"
            android:layout_height="162dp"
            android:id="@+id/rs_bild"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="371dp"
            android:layout_marginRight="371dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="9dp" app:layout_constraintTop_toBottomOf="@+id/rs_nummerEingabe"/>

</android.support.constraint.ConstraintLayout>