<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feedback_screen">
    <Button
            android:id="@+id/fb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/fs_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="47dp" android:layout_marginEnd="40dp" android:layout_marginRight="40dp"
            android:onClick="nochmal"/>

    <TextView
            android:id="@+id/fb_text1"
            android:layout_width="272dp"
            android:layout_height="92dp"
            android:layout_marginEnd="79dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="79dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="60dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/fs_textFeedback"
            android:textColor="#4CAF50"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/fb_text2"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:text="@string/fs_textStern"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp"
            android:textSize="16sp" android:textColor="@android:color/black" android:gravity="center_horizontal"
            android:layout_marginTop="29dp" app:layout_constraintTop_toBottomOf="@+id/fb_text1"/>

    <ImageView
            android:id="@+id/fb_bilder"
            android:layout_width="277dp"
            android:layout_height="241dp"
            android:layout_marginBottom="76dp"
            android:layout_marginEnd="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="83dp"
            app:layout_constraintBottom_toTopOf="@+id/fb_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fb_text2"/>

</android.support.constraint.ConstraintLayout>